--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,15 @@ docutils==0.14
 ecdsa==0.13
 enum34==1.1.6
 Fabric==1.10.1
+funcsigs==1.0.2
 futures==3.2.0
 ipython==5.7.0
 ipython-genutils==0.2.0
 jmespath==0.9.3
+mock==2.0.0
 paramiko==1.15.2
 pathlib2==2.3.2
+pbr==4.0.3
 pexpect==4.5.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
