--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,1 @@
-backports.shutil-get-terminal-size==1.0.0
-boto==2.36.0
-boto3==1.7.24
-botocore==1.10.24
-cuisine==0.7.4
-decorator==4.3.0
-docutils==0.14
-ecdsa==0.13
-enum34==1.1.6
-Fabric==1.10.1
-funcsigs==1.0.2
-futures==3.2.0
-ipython==5.7.0
-ipython-genutils==0.2.0
-jmespath==0.9.3
-mock==2.0.0
-paramiko==1.15.2
-pathlib2==2.3.2
-pbr==4.0.3
-pexpect==4.5.0
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-pycrypto==2.6.1
-Pygments==2.2.0
-python-dateutil==2.7.3
-requests==2.6.0
-s3transfer==0.1.13
-scandir==1.7
-simplegeneric==0.8.1
-six==1.11.0
-traitlets==4.3.2
-wcwidth==0.1.7
+Fabric3
