--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,42 @@
-Fabric3
+alabaster==0.7.12
+appnope==0.1.0
+asn1crypto==0.24.0
+Babel==2.6.0
+backcall==0.1.0
+bcrypt==3.1.5
+certifi==2018.11.29
+cffi==1.11.5
+chardet==3.0.4
+cryptography==2.4.2
+decorator==4.3.0
+docutils==0.14
+Fabric3==1.14.post1
+idna==2.8
+imagesize==1.1.0
+ipython==7.2.0
+ipython-genutils==0.2.0
+jedi==0.13.2
+Jinja2==2.10
+MarkupSafe==1.1.0
+packaging==18.0
+paramiko==2.4.2
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
+prompt-toolkit==2.0.7
+ptyprocess==0.6.0
+pyasn1==0.4.5
+pycparser==2.19
+Pygments==2.3.1
+PyNaCl==1.3.0
+pyparsing==2.3.0
+pytz==2018.7
+requests==2.21.0
+six==1.12.0
+snowballstemmer==1.2.1
+Sphinx==1.8.3
+sphinx-rtd-theme==0.4.2
+sphinxcontrib-websupport==1.1.0
+traitlets==4.3.2
+urllib3==1.24.1
+wcwidth==0.1.7
